<resources>
    <string name="app_name">WMC App</string>
    <string name="app_long_name">WMC EXP Helper</string>
    <string name="action_settings">Settings</string>
    <string name="settings_about">About</string>
    <string name="settings_help">Help</string>
    <string name="settings_affiliates">Affiliates</string>
    <string name="settings_logout">Logout</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_add_jobs">AddJobs</string>
    <string name="title_activity_view_jobs">ViewJobs</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_employer_menu">EmployerMenu</string>
    <string name="title_activity_manage_jobs">ManageJobs</string>
    <string name="title_activity_manage_profile">ManageProfile</string>
    <string name="title_activity_student_menu">StudentMenu</string>
    <string name="title_activity_app_status">AppStatus</string>
    <string name="title_activity_apply_for_job">ApplyForJob</string>
    <string name="title_activity_email">Email</string>
    <string name="title_activity_help_screen">HelpScreen</string>
    <string name="title_activity_affiliates">Affiliates</string>

    <string name="txtWMC"><a href="http://www.wmc.ac.uk">Wirral Metropolitan College</a></string>
    <string name="txtChester"><a href="http://www.chester.ac.uk">University of Chester</a></string>
    <string name="txtGDocs"><a href="http://developer.android.com/develop/index.html">Android Developer Reference</a></string>
    <string name="title_activity_review_apps">ReviewApps</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_student_info">StudentInfo</string>
    <string name="title_activity_user_info">UserInfo</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_user_stats">UserStats</string>
    <string name="title_activity_edit_jobs">EditJobs</string>

</resources>
