<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/settings_about"
        android:orderInCategory="1"
        android:title="@string/settings_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/settings_help"
        android:orderInCategory="2"
        android:title="@string/settings_help"
        app:showAsAction="never" />
    <item
        android:id="@+id/settings_affiliates"
        android:orderInCategory="3"
        android:title="@string/settings_affiliates"
        app:showAsAction="never" />
    <item
        android:id="@+id/settings_logout"
        android:orderInCategory="4"
        android:title="@string/settings_logout"
        app:showAsAction="never" />
</menu>
