<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wmcblue"
    tools:context="d.wmcapp.Affiliates">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"
        />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_below="@+id/app_bar"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:padding="10dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Affiliates"
            android:textColor="#fff"
            android:textSize="35sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="Affiliated parties associated with this app are available below. Please click for more information:"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="sans"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/txtWMC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txtWMC"
            android:textColorLink="@android:color/white"
            android:textSize="20sp"
            android:typeface="sans"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/txtChester"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txtChester"
            android:textColorLink="@android:color/white"
            android:textSize="20sp"
            android:typeface="sans"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/txtGDev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txtGDocs"
            android:textColorLink="@android:color/white"
            android:textSize="20sp"
            android:typeface="sans"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

    </LinearLayout>

</RelativeLayout>
